# online_movies

./: .gitignore  .pylintrc  README.md  docker-compose.override.yml.example  docker-compose.yml
services/auth_api/: Dockerfile  README.md  config.py  main.py  pyproject.toml
services/auth_api/app/: __init__.py  db_admin.py  decorators.py  endpoints.py  models.py  schemas.py  service.py  views.py
services/auth_api/docs/: README.MD  auth.puml  swagger.yaml
services/auth_api/migrations/versions/: 94b33ee1490d_.py
services/auth_api/oauth/: base.py  yandex.py
services/auth_api/tests/: conftest.py  test_views.py
services/auth_api/utils/: recaptcha.py
services/billing_admin/: Dockerfile  celerybeat-schedule  manage.py  pyproject.toml
services/billing_admin/api/: urls.py
services/billing_admin/api/v1/: urls.py  views.py
services/billing_admin/billing/config/: celery.py  urls.py  wsgi.py
services/billing_admin/config/: celery.py  middleware.py  urls.py
services/billing_admin/demo/: forms.py  services.py  urls.py  views.py
services/billing_admin/deploy/: entrypoint.sh
services/billing_admin/diagrams/: payment.puml  postgres.uml
services/billing_admin/load_tests/: README.MD  auth_roles.py  movies_locust.py  notify.py  services.py  settings.py
services/billing_admin/requirements/: base.txt  dev.txt
services/billing_admin/services/: auth.py  middleware.py  notify.py
services/billing_admin/stripe_payment/: managers.py  models.py
services/billing_admin/subscriptions/: admin.py  models.py  querysets.py  tasks.py  tests.py  utils.py
(+263 files in other folders)
